# lsp-plugins-rs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
cpp_ref/: bindings.cpp  bindings.h  bindings_native.cpp  upstream_wrapper.cpp  upstream_wrapper_units.cpp
crates/gst-plugins-lsp/: Cargo.toml
crates/gst-plugins-lsp/src/: base.rs  compressor.rs  crossover.rs  dither.rs  equalizer.rs  expander.rs  gate.rs  lib.rs  limiter.rs  meter.rs  noise.rs  oscillator.rs
crates/lsp-dsp-lib/: Cargo.toml  build.rs
crates/lsp-dsp-lib/benches/: ab_perf.rs  biquad_bench.rs  fft_bench.rs
crates/lsp-dsp-lib/src/: complex.rs  convolution.rs  copy.rs  correlation.rs  dynamics.rs  fastconv.rs  fft.rs  filters.rs  float.rs  lib.rs  mix.rs  msmatrix.rs  pan.rs  resampling.rs  search.rs  simd.rs  types.rs
crates/lsp-dsp-lib/src/math/: horizontal.rs  mod.rs  packed.rs  scalar.rs
crates/lsp-dsp-lib/tests/: ab_reference.rs
crates/lsp-dsp-units/: Cargo.toml  build.rs
crates/lsp-dsp-units/benches/: ab_perf.rs  convolver_bench.rs  dynamics_bench.rs  filter_bench.rs  meter_bench.rs  oversampler_bench.rs
crates/lsp-dsp-units/src/: consts.rs  interpolation.rs  lib.rs  units.rs
crates/lsp-dsp-units/src/ctl/: blink.rs  bypass.rs  counter.rs  crossfade.rs  mod.rs  toggle.rs
crates/lsp-dsp-units/src/dynamics/: compressor.rs  expander.rs  gate.rs  limiter.rs  mod.rs  surge_protector.rs
crates/lsp-dsp-units/src/filters/: bank.rs  butterworth.rs  coeffs.rs  dynamic_filters.rs  equalizer.rs  filter.rs  mod.rs  spectral_tilt.rs
crates/lsp-dsp-units/src/meters/: correlometer.rs  loudness.rs  mod.rs  panometer.rs  peak.rs  true_peak.rs
crates/lsp-dsp-units/src/misc/: adsr.rs  depopper.rs  envelope.rs  fade.rs  lfo.rs  mod.rs  sigmoid.rs  windows.rs
crates/lsp-dsp-units/src/noise/: generator.rs  lcg.rs  mls.rs  mod.rs  velvet.rs
crates/lsp-dsp-units/src/sampling/: mod.rs  oversampler.rs  player.rs  sample.rs
crates/lsp-dsp-units/src/util/: analyzer.rs  convolver.rs  crossover.rs  delay.rs  dither.rs  dynamic_delay.rs  fft_crossover.rs  latency_detector.rs  mod.rs  oscillator.rs  randomizer.rs  response_taker.rs  ring_buffer.rs  shift_buffer.rs  sidechain.rs  trigger.rs
crates/lsp-dsp-units/tests/: ab_dynamics.rs  ab_filters.rs  ab_meters.rs  ab_upstream.rs
docs/: benchmark-analysis-2026-02-16.md
