[workspace]
resolver = "3"
members = [
    "crates/lsp-dsp-lib",
    "crates/lsp-dsp-units",
    "crates/gst-plugins-lsp",
]

[workspace.package]
edition = "2024"
license = "LGPL-3.0-or-later"
repository = "https://github.com/srperens/lsp-plugins-rs"

[workspace.dependencies]
thiserror = "2"
rustfft = "6.4"
realfft = "3.5"
num-complex = "0.4"
float-cmp = "0.10"
hound = "3.5"
rand = "0.10"
rand_chacha = "0.10"
bitflags = "2"
criterion = { version = "0.8", features = ["html_reports"] }
multiversion = "0.8"
gstreamer = "0.24"
gstreamer-base = "0.24"
gstreamer-audio = "0.24"
once_cell = "1"
