[package]
name = "gst-plugins-lsp"
version = "1.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GStreamer audio processing plugins using LSP DSP"

[dependencies]
gstreamer = { workspace = true }
gstreamer-base = { workspace = true }
gstreamer-audio = { workspace = true }
once_cell = { workspace = true }
lsp-dsp-lib = { path = "../lsp-dsp-lib" }
lsp-dsp-units = { path = "../lsp-dsp-units" }

[lib]
name = "gstlspdsprs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
gstreamer-base = { workspace = true }
