[package]
name = "lsp-dsp-lib"
version = "0.1.0"
description = "Low-level DSP primitives — Rust port of lsp-plugins/lsp-dsp-lib"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
upstream-bench = []

[dependencies]
rustfft = { workspace = true }
realfft = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
multiversion = { workspace = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
float-cmp = { workspace = true }
hound = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "biquad_bench"
harness = false

[[bench]]
name = "fft_bench"
harness = false

[[bench]]
name = "ab_perf"
harness = false
