[package]
name = "lsp-dsp-lib"
version = "1.3.0"
description = "Low-level DSP primitives — Rust port of lsp-plugins/lsp-dsp-lib"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
cpp-ref = ["dep:cc"]
upstream-bench = ["cpp-ref"]

[dependencies]
rustfft = { workspace = true }
realfft = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
multiversion = { workspace = true }

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
float-cmp = { workspace = true }
hound = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "biquad_bench"
harness = false

[[bench]]
name = "fft_bench"
harness = false

[[bench]]
name = "ab_perf"
harness = false
