[package]
name = "lsp-dsp-units"
version = "1.2.1"
description = "High-level DSP processing components — Rust port of lsp-plugins/lsp-dsp-units"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lsp-dsp-lib = { path = "../lsp-dsp-lib" }
thiserror = { workspace = true }
bitflags = { workspace = true }

[features]
default = []
cpp-ref = ["dep:cc"]

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
float-cmp = { workspace = true }
hound = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "dynamics_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false

[[bench]]
name = "convolver_bench"
harness = false

[[bench]]
name = "meter_bench"
harness = false

[[bench]]
name = "oversampler_bench"
harness = false

[[bench]]
name = "ab_perf"
harness = false
